@@ -142,13 +142,13 @@ RcppExport SEXP setMessageField(SEXP, SEXP, SEXP);
 int GET_int(SEXP, int);
 double GET_double(SEXP, int);
 float GET_float(SEXP, int);
-int32 GET_int32(SEXP, int);
-int64 GET_int64(SEXP, int);
-uint32 GET_uint32(SEXP, int);
-uint64 GET_uint64(SEXP, int);
-bool GET_bool(SEXP, int);
-std::string GET_stdstring(SEXP, int);
-std::string GET_bytes(SEXP, int);
+int32 GET_int32(SEXP, R_xlen_t);
+int64 GET_int64(SEXP, R_xlen_t);
+uint32 GET_uint32(SEXP, R_xlen_t);
+uint64 GET_uint64(SEXP, R_xlen_t);
+bool GET_bool(SEXP, R_xlen_t);
+std::string GET_stdstring(SEXP, R_xlen_t);
+std::string GET_bytes(SEXP, R_xlen_t);
 void CHECK_values_for_enum(const GPB::FieldDescriptor*, SEXP);
 void CHECK_messages(const GPB::FieldDescriptor*, SEXP);
 
